// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`store provider test suite debug mode 1`] = `<div />`;

exports[`store provider test suite debug mode 2`] = `
Array [
  "%cplume2@1.1.0🚀",
  "StoreProvider(DebugApp) will mount 🚀",
]
`;

exports[`store provider test suite first render 1`] = `
<div>
  plume
</div>
`;

exports[`store provider test suite merge store state 1`] = `<div />`;

exports[`store provider test suite store dispath change render 1`] = `
<div>
  plume++
</div>
`;
